--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,17 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Vocalizer
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" class="ion-padding">
+<h1>Parle Moi !</h1>
+<ion-item>
+  <ion-label>Texte:</ion-label>
+  <ion-textarea [(ngModel)]="txt.parole"  name="parole" placeholder=""id="parole" rows="6" cols="20" placeholder="Je parle..."></ion-textarea>
+</ion-item>
+<ion-button (click)="speak()">Parle</ion-button>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
